doc/logfile.txt
Class documentation
<---- javadoc command: ---->
/Applications/BlueJ.app/Contents/Frameworks/jdk.framework/Versions/A/Contents/Home/bin/javadoc
-author
-version
-nodeprecated
-package
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
/Applications/BlueJ.app/Contents/Resources/Java/bluejcore.jar:/Applications/BlueJ.app/Contents/Resources/Java/junit-4.8.2.jar:/Applications/BlueJ.app/Contents/Resources/Java/userlib/pi4j-core.jar:/Applications/BlueJ.app/Contents/Resources/Java/userlib/pi4j-device.jar:/Applications/BlueJ.app/Contents/Resources/Java/userlib/pi4j-gpio-extension.jar:/Applications/BlueJ.app/Contents/Resources/Java/userlib/pi4j-service.jar:/Users/ericweber/Desktop/Eric's/Lafayette/Second Semester/CS150/Project 2
-d
/Users/ericweber/Desktop/Eric's/Lafayette/Second Semester/CS150/Project 2/doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
/Applications/BlueJ.app/Contents/Resources/Java/bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
/Users/ericweber/Desktop/Eric's/Lafayette/Second Semester/CS150/Project 2/PHold.java
<---- end of javadoc command ---->
Loading source file /Users/ericweber/Desktop/Eric's/Lafayette/Second Semester/CS150/Project 2/PHold.java...
/Users/ericweber/Desktop/Eric's/Lafayette/Second Semester/CS150/Project 2/PHold.java:72: error: illegal start of expression
        if (canMove(t, r, ) {
                          ^
/Users/ericweber/Desktop/Eric's/Lafayette/Second Semester/CS150/Project 2/PHold.java:72: error: ')' expected
        if (canMove(t, r, ) {
                           ^
2 errors
